--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.2.1-rc.1-next-a59f53a60-20220308",
     "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
